# ur_controller

ur_controller/: CMakeLists.txt  Cargo.toml  package.xml  r2r_cargo.cmake
ur_controller/src/: ur_controller.rs
ur_controller/templates/: move_j.script  pick.script  place.script  safe_move_j.script
ur_controller_msgs/: CMakeLists.txt  package.xml
ur_controller_msgs/action/: URControl.action
ur_controller_msgs/srv/: GenerateURScript.srv
