[package]
name = "ur_controller"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2021"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.6.2" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
tera = "1.15.0"
serde = "1.0.130"

[[bin]]
name = "ur_controller"
path = "src/ur_controller.rs"