[package]
name = "ur_controller"
version = "0.1.0"
authors = ["Endre Erős <endree@chalmers.se>"]
edition = "2021"

[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.7.1"
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
tera = "1.15.0"
serde = "1.0.130"
serde_json = "1.0.79"

[[bin]]
name = "ur_controller"
path = "src/ur_controller.rs"
