<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ur_controller</name>
  <version>0.0.1</version>
  <description>UR Controller.</description>
  <maintainer email="endree@chalmers.se">Endre Erős</maintainer>
  <license>no_license</license>
  <author>Endre Erős</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ur_controller_msgs</build_depend>
  <build_depend>simple_robot_simulator_msgs</build_depend>
  <build_depend>ur_script_msgs</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ur_controller_msgs</exec_depend>
  <exec_depend>simple_robot_simulator_msgs</exec_depend>
  <exec_depend>ur_script_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
